# MyOwnPlanner

./: .example.env  .gitignore  README.md  alembic.ini  bot_deprecated.py  database.py  docker-compose.yml  main.py  planner.db  pyproject.toml  todo.MD
alembic/: env.py
alembic/versions/: 2026_02_16_initial_migration_create_tasks_table.py
app/: main.py  settings.py
app/bot/: bot.py  enums.py  handlers.py
app/database/: database.py
app/di/: di_container.py
app/llm_clients/: gigachat.py  llm_client_abc.py
app/llm_services/: gigachat.py  llm_service_abc.py
app/models/: tasks.py
app/repositories/: repo_abc.py  tasks.py
app/schemas/: base_schemas.py  tasks.py
app/tasks/services/: tasks.py
bot/: enums.py  handlers.py
di/: di_container.py
llm_services/: gigachat.py  llm_abc.py
models/: tasks.py
repositories/: tasks.py
schemas/: tasks.py
services/: tasks.py
